Se creó con Colab

--- a/ABC_XYZ.ipynb
+++ b/ABC_XYZ.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIxPbFjaWGpP6a05XfJqQD",
+      "authorship_tag": "ABX9TyMhpKoNxtJneXW5RkVme8H7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1277,12 +1277,203 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import requests\n",
+        "from io import BytesIO\n",
+        "from scipy.stats.mstats import winsorize\n",
+        "\n",
+        "# 1. Descargar y cargar datos\n",
+        "url = \"https://github.com/santiagonajera/OPTIMIZACI-N-DE-INVENTARIOS-CON-POWER-BI/raw/refs/heads/main/Clases-PowerBi-Inventarios-Datos.xlsx\"\n",
+        "response = requests.get(url)\n",
+        "excel_data = BytesIO(response.content)\n",
+        "\n",
+        "# Leer todas las hojas necesarias\n",
+        "historico_df = pd.read_excel(excel_data, sheet_name='Historico', index_col='ITEM')\n",
+        "forecast_df = pd.read_excel(excel_data, sheet_name='Forecast')\n",
+        "precios_df = pd.read_excel(excel_data, sheet_name='Precios-Costos')\n",
+        "\n",
+        "# 2. Clasificación ABC\n",
+        "# Limpiar y preparar datos para ABC\n",
+        "forecast_df['ITEM'] = forecast_df['ITEM'].astype(str).str.strip()\n",
+        "precios_df['ITEM'] = precios_df['ITEM'].astype(str).str.strip()\n",
+        "forecast_df.columns = forecast_df.columns.str.strip()\n",
+        "\n",
+        "# Calcular ventas anuales\n",
+        "monthly_cols = [col for col in forecast_df.columns if col != 'ITEM']\n",
+        "forecast_df['Total_Ventas_Anual'] = forecast_df[monthly_cols].sum(axis=1)\n",
+        "\n",
+        "# Limpiar y convertir precios\n",
+        "precios_df['Precio'] = precios_df['Precio'].astype(str).str.replace(r'[\\$,]', '', regex=True).astype(float)\n",
+        "precios_df['Costo'] = precios_df['Costo'].astype(str).str.replace(r'[\\$,]', '', regex=True).astype(float)\n",
+        "\n",
+        "# Unir datos y calcular valor total\n",
+        "abc_df = forecast_df[['ITEM', 'Total_Ventas_Anual']].merge(\n",
+        "    precios_df[['ITEM', 'Precio']], on='ITEM', how='inner')\n",
+        "abc_df['Valor_Total_Dolares'] = abc_df['Total_Ventas_Anual'] * abc_df['Precio']\n",
+        "\n",
+        "# Ordenar y calcular acumulado\n",
+        "abc_df = abc_df.sort_values('Valor_Total_Dolares', ascending=False)\n",
+        "abc_df['Porcentaje_Acumulado'] = abc_df['Valor_Total_Dolares'].cumsum() / abc_df['Valor_Total_Dolares'].sum() * 100\n",
+        "\n",
+        "# Clasificar ABC\n",
+        "def clasificar_abc(porcentaje):\n",
+        "    if porcentaje <= 60: return 'A'\n",
+        "    elif porcentaje <= 80: return 'B'\n",
+        "    else: return 'C'\n",
+        "\n",
+        "abc_df['Clase_ABC'] = abc_df['Porcentaje_Acumulado'].apply(clasificar_abc)\n",
+        "\n",
+        "# 3. Clasificación XYZ\n",
+        "# Seleccionar últimos 18 meses\n",
+        "xyz_data = historico_df.iloc[:, -18:].copy()\n",
+        "\n",
+        "# Función para limpiar datos\n",
+        "def clean_row(row):\n",
+        "    clean = row.copy().astype(float)\n",
+        "    positive_vals = clean[clean > 0]\n",
+        "    median_val = positive_vals.median() if not positive_vals.empty else 0\n",
+        "    clean[clean <= 0] = median_val\n",
+        "\n",
+        "    if clean.nunique() > 1:\n",
+        "        try:\n",
+        "            clean[:] = winsorize(clean, limits=[0.05, 0.05])\n",
+        "        except:\n",
+        "            pass\n",
+        "    return clean\n",
+        "\n",
+        "# Aplicar limpieza\n",
+        "xyz_clean = xyz_data.apply(clean_row, axis=1)\n",
+        "\n",
+        "# Calcular coeficiente de variación\n",
+        "mean = xyz_clean.mean(axis=1)\n",
+        "std = xyz_clean.std(axis=1)\n",
+        "cv = std / mean\n",
+        "cv = cv.replace([np.inf, -np.inf], 1000).fillna(1000)\n",
+        "\n",
+        "# Clasificar XYZ\n",
+        "p33 = cv.quantile(0.33)\n",
+        "p67 = cv.quantile(0.67)\n",
+        "xyz_df = pd.DataFrame({\n",
+        "    'Media_Demanda': mean,\n",
+        "    'Desviacion_Demanda': std,\n",
+        "    'CV': cv\n",
+        "})\n",
+        "xyz_df['Clase_XYZ'] = pd.cut(cv, bins=[-1, p33, p67, np.inf], labels=['X', 'Y', 'Z'])\n",
+        "\n",
+        "# 4. Combinar ABC y XYZ\n",
+        "# Preparar DataFrames para merge\n",
+        "abc_df = abc_df.set_index('ITEM')\n",
+        "xyz_df = xyz_df[['CV', 'Clase_XYZ']]  # Solo necesitamos estas columnas\n",
+        "\n",
+        "# Hacer merge\n",
+        "final_df = abc_df.merge(xyz_df, left_index=True, right_index=True, how='inner')\n",
+        "\n",
+        "# CORRECCIÓN: Convertir categorías a strings antes de concatenar\n",
+        "final_df['Clase_ABC'] = final_df['Clase_ABC'].astype(str)\n",
+        "final_df['Clase_XYZ'] = final_df['Clase_XYZ'].astype(str)\n",
+        "\n",
+        "# Crear clasificación combinada\n",
+        "final_df['Clasificacion_ABC_XYZ'] = final_df['Clase_ABC'] + final_df['Clase_XYZ']\n",
+        "\n",
+        "# 5. Resultados\n",
+        "print(\"=\"*80)\n",
+        "print(f\"Total productos clasificados: {len(final_df)}\")\n",
+        "print(\"Distribución ABC:\")\n",
+        "print(final_df['Clase_ABC'].value_counts())\n",
+        "print(\"\\nDistribución XYZ:\")\n",
+        "print(final_df['Clase_XYZ'].value_counts())\n",
+        "print(\"\\nDistribución ABC-XYZ:\")\n",
+        "print(final_df['Clasificacion_ABC_XYZ'].value_counts())\n",
+        "print(\"=\"*80)\n",
+        "\n",
+        "# Mostrar ejemplo de resultados\n",
+        "print(\"Ejemplo de clasificación combinada:\")\n",
+        "print(final_df.sample(10, random_state=1)[[\n",
+        "    'Total_Ventas_Anual', 'Valor_Total_Dolares', 'Porcentaje_Acumulado',\n",
+        "    'CV', 'Clase_ABC', 'Clase_XYZ', 'Clasificacion_ABC_XYZ'\n",
+        "]].round(2))\n",
+        "\n",
+        "# 6. Exportar resultados (opcional)\n",
+        "final_df.to_excel(\"Clasificacion_ABC_XYZ.xlsx\")\n",
+        "print(\"\\nResultados exportados a 'Clasificacion_ABC_XYZ.xlsx'\")\n",
+        "print(\"=\"*80)"
+      ],
       "metadata": {
-        "id": "WK2lH6xd3FUi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WK2lH6xd3FUi",
+        "outputId": "12fe03c8-9aab-4842-8a19-5f11588681ca"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "================================================================================\n",
+            "Total productos clasificados: 660\n",
+            "Distribución ABC:\n",
+            "Clase_ABC\n",
+            "A    299\n",
+            "C    214\n",
+            "B    147\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Distribución XYZ:\n",
+            "Clase_XYZ\n",
+            "Y    224\n",
+            "X    218\n",
+            "Z    218\n",
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Distribución ABC-XYZ:\n",
+            "Clasificacion_ABC_XYZ\n",
+            "AY    116\n",
+            "AZ    106\n",
+            "CX     87\n",
+            "AX     77\n",
+            "CY     68\n",
+            "CZ     59\n",
+            "BX     54\n",
+            "BZ     53\n",
+            "BY     40\n",
+            "Name: count, dtype: int64\n",
+            "================================================================================\n",
+            "Ejemplo de clasificación combinada:\n",
+            "          Total_Ventas_Anual  Valor_Total_Dolares  Porcentaje_Acumulado    CV  \\\n",
+            "ITEM                                                                            \n",
+            "ITEM 114             2912004           9260172.72                 91.26  0.16   \n",
+            "ITEM 244             3959916          13028123.64                 67.90  0.16   \n",
+            "ITEM 570             3976404          10298886.36                 86.26  0.15   \n",
+            "ITEM 341             4993920          17129145.60                 39.07  0.16   \n",
+            "ITEM 427             4098360          15573768.00                 50.93  0.15   \n",
+            "ITEM 78              4286556          13245458.04                 66.22  0.16   \n",
+            "ITEM 356             2611332           5744930.40                 99.41  0.14   \n",
+            "ITEM 96              5480208          16166613.60                 47.04  0.15   \n",
+            "ITEM 243             4270944          19133829.12                 28.87  0.16   \n",
+            "ITEM 3               6397464          18552645.60                 31.67  0.16   \n",
+            "\n",
+            "         Clase_ABC Clase_XYZ Clasificacion_ABC_XYZ  \n",
+            "ITEM                                                \n",
+            "ITEM 114         C         Z                    CZ  \n",
+            "ITEM 244         B         Y                    BY  \n",
+            "ITEM 570         C         Y                    CY  \n",
+            "ITEM 341         A         Y                    AY  \n",
+            "ITEM 427         A         Y                    AY  \n",
+            "ITEM 78          B         Z                    BZ  \n",
+            "ITEM 356         C         X                    CX  \n",
+            "ITEM 96          A         X                    AX  \n",
+            "ITEM 243         A         Z                    AZ  \n",
+            "ITEM 3           A         Z                    AZ  \n",
+            "\n",
+            "Resultados exportados a 'Clasificacion_ABC_XYZ.xlsx'\n",
+            "================================================================================\n"
+          ]
+        }
+      ]
     }
   ]
 }
